[gd_scene load_steps=5 format=2]

[ext_resource path="res://Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://world.gd" type="Script" id=2]
[ext_resource path="res://upgrade.tscn" type="PackedScene" id=3]
[ext_resource path="res://label.tscn" type="PackedScene" id=4]

[node name="world" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="sellbutton" parent="CanvasLayer" instance=ExtResource( 1 )]
margin_left = 0.400002
margin_top = 62.8
margin_right = 111.4
margin_bottom = 108.8
text = "Sell Food"

[node name="FoodButton" parent="CanvasLayer" instance=ExtResource( 1 )]
text = "Make food"

[node name="foodlabel" parent="CanvasLayer" instance=ExtResource( 4 )]
text = "Food: 0"

[node name="moneylabel" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 2.47998
margin_top = 53.8
margin_right = 410.48
margin_bottom = 102.8
text = "Money: 0"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
margin_left = 23.0
margin_top = 221.0
margin_right = 404.0
margin_bottom = 584.0
columns = 2
__meta__ = {
"_edit_group_": true
}

[node name="VScrollBar" type="VScrollBar" parent="CanvasLayer/GridContainer"]
margin_right = 12.0
margin_bottom = 363.0
size_flags_vertical = 3
max_value = 20.0

[node name="Panel" type="Panel" parent="CanvasLayer/GridContainer"]
margin_left = 16.0
margin_right = 381.0
margin_bottom = 363.0
size_flags_horizontal = 3

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/GridContainer/Panel"]
margin_left = 10.0
margin_top = 5.0
margin_right = 350.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 4

[node name="foodupgrade" parent="CanvasLayer/GridContainer/Panel/VSplitContainer" instance=ExtResource( 3 )]
margin_bottom = 74.0
disabled = true
text = "Food Rate"
rate_increase = 0.15
max_upgrade_level = 10
upgrade_text = " Food Rate UP!"

[node name="sellupgrade" parent="CanvasLayer/GridContainer/Panel/VSplitContainer" instance=ExtResource( 3 )]
margin_top = 86.0
margin_bottom = 156.0
size_flags_vertical = 0
disabled = true
text = "Sell Rate UP"
rate_increase = 0.2
cost = 20
upgrade_text = " Sell Rate UP"

[node name="upgrade2" parent="CanvasLayer/GridContainer/Panel/VSplitContainer" instance=ExtResource( 3 )]
margin_top = 170.0
margin_bottom = 245.0
disabled = true
cost = 20
max_upgrade_level = 10

[connection signal="pressed" from="CanvasLayer/sellbutton" to="." method="_on_sellbutton_pressed"]
[connection signal="pressed" from="CanvasLayer/FoodButton" to="." method="_on_FoodButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Panel/VSplitContainer/foodupgrade" to="." method="_on_foodupgrade_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Panel/VSplitContainer/sellupgrade" to="." method="_on_sellupgrade_pressed"]
